# simple-temp-app

./: .gitignore  README.md  pyproject.toml  simple_temp.py  start.sh
src/: read_temps.py
