[project]
name = ""
version = ""
description = ""
authors = [
    {name = "heko", email = "91366057+hkohko@users.noreply.github.com"},
]
dependencies = [
    "psutil>=5.9.6",
    "PySimpleGUI>=4.60.5",
    "pre-commit>=3.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
